--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,3 +83,14 @@ p {
 .info-wrapper td {
     padding: 10px;
 }
+
+.info-wrapper td:first-child {
+    font-weight: bold;
+}
+
+.message {
+    margin: 20px 0;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.2);
+}
